rename angular element to PDFViewer

--- a/demo/app/app.component.html
+++ b/demo/app/app.component.html
@@ -4,6 +4,6 @@
 	<GridLayout rows="*" columns="*">
 		<ActivityIndicator row="0" col="0" [busy]="isLoading" verticalAlignment="center" horizontalAlignment="center">
 		</ActivityIndicator>
-		<PDFView [src]="invoiceLocalPath" row="0" col="0"></PDFView>
+		<PDFViewer [src]="invoiceLocalPath" row="0" col="0"></PDFViewer>
 	</GridLayout>
 </StackLayout>
